# damselfish

./: CMakeLists.txt  Damselfish UML.drawio  Makefile  README.md  damselfish.sln  damselfish.vcxproj  damselfish.vcxproj.filters
damselfish-tests/: damselfish-tests.vcxproj  damselfish-tests.vcxproj.filters  damselfish_tests.cpp
include/: damselfish_json.hpp
src/: damselfish.cpp  damselfish_evaluator.cpp  damselfish_json.cpp  damselfish_lexer.cpp  damselfish_python.cpp
